[gd_scene load_steps=29 format=1]

[ext_resource path="res://gui/font_16.tres" type="Theme" id=1]
[ext_resource path="res://scripts/menu_controller.gd" type="Script" id=2]
[ext_resource path="res://gui/vigette.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/gui/dialogs/gui_spritesheet.png" type="Texture" id=4]
[ext_resource path="res://gui/small_red_theme.tres" type="Theme" id=5]
[ext_resource path="res://gui/font_12.tres" type="Theme" id=6]
[ext_resource path="res://assets/branding/tof_logo_enchanced.png" type="Texture" id=7]
[ext_resource path="res://gui/settings/menu_settings.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/gui/dialogs/menu9_dark@2x.png" type="Texture" id=9]
[ext_resource path="res://assets/gui/buttons/analog_size3_0.png" type="Texture" id=10]
[ext_resource path="res://assets/gui/buttons/analog_size3_1.png" type="Texture" id=11]
[ext_resource path="res://assets/gui/buttons/analog_size3_2.png" type="Texture" id=12]
[ext_resource path="res://assets/gui/buttons/analog_size3_3.png" type="Texture" id=13]
[ext_resource path="res://gui/font_14.tres" type="Theme" id=14]
[ext_resource path="res://assets/branding/p1x_logo.png" type="Texture" id=15]
[ext_resource path="res://assets/gui/buttons/analog_size3_0.png" type="Texture" id=16]
[ext_resource path="res://assets/gui/buttons/analog_size3_1.png" type="Texture" id=17]
[ext_resource path="res://assets/gui/buttons/analog_size3_2.png" type="Texture" id=18]
[ext_resource path="res://assets/gui/buttons/analog_size3_4.png" type="Texture" id=19]
[ext_resource path="res://gui/small_gray_theme.tres" type="Theme" id=20]
[ext_resource path="res://assets/gui/buttons/analog_size2_0.png" type="Texture" id=21]
[ext_resource path="res://assets/gui/buttons/analog_size2_1.png" type="Texture" id=22]
[ext_resource path="res://assets/gui/buttons/analog_size2_2.png" type="Texture" id=23]
[ext_resource path="res://assets/gui/buttons/analog_size2_3.png" type="Texture" id=24]
[ext_resource path="res://assets/gui/buttons/analog_size2_4.png" type="Texture" id=25]
[ext_resource path="res://gui/stats.xscn" type="PackedScene" id=26]

[sub_resource type="Animation" id=1]

resource/name = "hide_main_menu"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("game_panel:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0.2, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("game_panel/under_logo:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -60 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("game_panel/under_logo:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=2]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("game_panel:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("game_panel/under_logo:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.3, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -60 ), Vector2( 0, -60 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("game_panel/under_logo:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}

[node name="menu" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )
__meta__ = {
"__editor_plugin_screen__": "2D",
"_edit_lock_": true
}

[node name="vigette" parent="." instance=ExtResource( 3 )]

editor/display_folded = true
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="middle" type="CenterContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
use_top_left = false
__meta__ = {
"_edit_lock_": true
}

[node name="center" type="Control" parent="middle"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 640.0
margin/top = 360.0
margin/right = 640.0
margin/bottom = 360.0

[node name="game_panel" type="Control" parent="middle/center"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="under_logo" type="Control" parent="middle/center/game_panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Sprite 7" type="Sprite" parent="middle/center/game_panel/under_logo"]

transform/pos = Vector2( -144, 66 )
transform/scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
vframes = 8
hframes = 8
frame = 16

[node name="Sprite 8" type="Sprite" parent="middle/center/game_panel/under_logo"]

transform/pos = Vector2( 0, 66 )
transform/scale = Vector2( 6, 3 )
texture = ExtResource( 4 )
vframes = 8
hframes = 8
frame = 17

[node name="Sprite 9" type="Sprite" parent="middle/center/game_panel/under_logo"]

transform/pos = Vector2( 144, 66 )
transform/scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
vframes = 8
hframes = 8
frame = 18

[node name="copy" type="Label" parent="middle/center/game_panel/under_logo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 5 )
margin/left = -176.0
margin/top = 34.0
margin/right = 176.0
margin/bottom = 50.0
text = "Version 0.x.x-BETA"
align = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="title3" type="Label" parent="middle/center/game_panel/under_logo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -184.0
margin/top = 51.0
margin/right = 176.0
margin/bottom = 67.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "FREE* & OPEN-SOURCE"
align = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="title5" type="Label" parent="middle/center/game_panel/under_logo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -184.0
margin/top = 66.0
margin/right = 176.0
margin/bottom = 82.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TURN-BASED STRATEGY GAME"
align = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="title4" type="Label" parent="middle/center/game_panel/under_logo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 6 )
margin/left = -217.0
margin/top = 87.0
margin/right = 213.0
margin/bottom = 99.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "* FREE AS FREEDOM, NOT FREE AS IN FREE BEER"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ToF_logo" type="Sprite" parent="middle/center/game_panel"]

transform/pos = Vector2( 0, -40 )
texture = ExtResource( 7 )

[node name="settings_panel" parent="middle/center" instance=ExtResource( 8 )]

visibility/visible = false
margin/top = -64.0
margin/bottom = -24.0

[node name="menu_anim" type="AnimationPlayer" parent="middle/center"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/hide_main_menu = SubResource( 1 )
anims/show_main_menu = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="top" type="CenterContainer" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
use_top_left = false

[node name="center" type="Control" parent="top"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 640.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 0.0

[node name="resume" type="Control" parent="top/center"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="background" type="Patch9Frame" parent="top/center/resume"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -312.0
margin/top = 72.0
margin/right = 176.0
margin/bottom = -96.0
texture = ExtResource( 9 )
patch_margin/left = 24
patch_margin/top = 24
patch_margin/right = 24
patch_margin/bottom = 24

[node name="resume_button" type="TextureButton" parent="top/center/resume"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -296.0
margin/top = 80.0
margin/right = 192.0
margin/bottom = -88.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )
textures/pressed = ExtResource( 11 )
textures/hover = ExtResource( 12 )
textures/disabled = ExtResource( 13 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0

[node name="Label" type="Label" parent="top/center/resume/resume_button"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 17.0
margin/right = 139.0
margin/bottom = 35.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RESUME GAME"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="menu_background" type="Control" parent="top/center"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 40.0
margin/bottom = 80.0

[node name="background" type="Patch9Frame" parent="top/center/menu_background"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -312.0
margin/top = -32.0
margin/right = -112.0
margin/bottom = 8.0
texture = ExtResource( 9 )
patch_margin/left = 24
patch_margin/top = 24
patch_margin/right = 24
patch_margin/bottom = 24

[node name="background1" type="Patch9Frame" parent="top/center/menu_background"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = -32.0
margin/right = -280.0
margin/bottom = 8.0
texture = ExtResource( 9 )
patch_margin/left = 24
patch_margin/top = 24
patch_margin/right = 24
patch_margin/bottom = 24

[node name="credits" type="Label" parent="top/center"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 14 )
margin/left = -259.0
margin/top = 18.0
margin/right = -169.0
margin/bottom = 63.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "INDIE GAME
DESIGN & 
DEVELOP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="p1x" type="Sprite" parent="top/center"]

transform/pos = Vector2( -287, 38 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 15 )
modulate = Color( 0, 0, 0, 1 )

[node name="settings" type="TextureButton" parent="top/center"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 16.0
margin/right = 144.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 16 )
textures/pressed = ExtResource( 17 )
textures/hover = ExtResource( 18 )
textures/disabled = ExtResource( 13 )
textures/focused = ExtResource( 19 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0

[node name="Label" type="Label" parent="top/center/settings"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 16.0
margin/right = 142.0
margin/bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LABEL_SETTINGS"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="close" type="TextureButton" parent="top/center"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -304.0
margin/top = 16.0
margin/right = 160.0
margin/bottom = -64.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 16 )
textures/pressed = ExtResource( 17 )
textures/hover = ExtResource( 18 )
textures/disabled = ExtResource( 13 )
textures/focused = ExtResource( 19 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0

[node name="Label" type="Label" parent="top/center/close"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -19.0
margin/top = 16.0
margin/right = 161.0
margin/bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LABEL_BACK_TO_GAME"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="quit" type="TextureButton" parent="top/center"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 168.0
margin/top = 16.0
margin/right = 312.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )
textures/pressed = ExtResource( 11 )
textures/hover = ExtResource( 12 )
textures/disabled = ExtResource( 13 )
textures/focused = ExtResource( 19 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0

[node name="Label" type="Label" parent="top/center/quit"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -8.0
margin/top = 16.0
margin/right = 150.0
margin/bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LABEL_QUIT_GAME"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="demo" type="TextureButton" parent="top/center"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -152.0
margin/top = 16.0
margin/right = -8.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 16 )
textures/pressed = ExtResource( 17 )
textures/hover = ExtResource( 18 )
textures/disabled = ExtResource( 13 )
textures/focused = ExtResource( 19 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0

[node name="Label1" type="Label" parent="top/center/demo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 16.0
margin/right = 145.0
margin/bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LABEL_RUN_DEMO"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="bottom" type="CenterContainer" parent="."]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
use_top_left = false

[node name="center" type="Control" parent="bottom"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 640.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 0.0

[node name="menu_background" type="Control" parent="bottom/center"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -16.0
margin/right = 40.0
margin/bottom = 24.0

[node name="background" type="Patch9Frame" parent="bottom/center/menu_background"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -288.0
margin/top = -72.0
margin/right = -240.0
margin/bottom = 32.0
texture = ExtResource( 9 )
patch_margin/left = 24
patch_margin/top = 24
patch_margin/right = 24
patch_margin/bottom = 24

[node name="play" type="TextureButton" parent="bottom/center"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -128.0
margin/top = -80.0
margin/right = 16.0
margin/bottom = -32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 16 )
textures/pressed = ExtResource( 17 )
textures/hover = ExtResource( 18 )
textures/disabled = ExtResource( 13 )
textures/focused = ExtResource( 19 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0

[node name="Label" type="Label" parent="bottom/center/play"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -4.0
margin/top = 16.0
margin/right = 144.0
margin/bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LABEL_SKIRMISH"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="workshop" type="TextureButton" parent="bottom/center"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 128.0
margin/top = -80.0
margin/right = 272.0
margin/bottom = -32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 16 )
textures/pressed = ExtResource( 17 )
textures/hover = ExtResource( 18 )
textures/disabled = ExtResource( 13 )
textures/focused = ExtResource( 19 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0

[node name="Label" type="Label" parent="bottom/center/workshop"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -10.0
margin/top = 16.0
margin/right = 150.0
margin/bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LABEL_MAP EDITOR"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="start_campaign" type="TextureButton" parent="bottom/center"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -280.0
margin/top = -80.0
margin/right = -136.0
margin/bottom = -32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 16 )
textures/pressed = ExtResource( 17 )
textures/hover = ExtResource( 18 )
textures/disabled = ExtResource( 13 )
textures/focused = ExtResource( 19 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0

[node name="Label" type="Label" parent="bottom/center/start_campaign"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -1.0
margin/top = 16.0
margin/right = 147.0
margin/bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LABEL_CAMPAIGN"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="completed" type="Label" parent="bottom/center"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 20 )
margin/left = -277.0
margin/top = -32.0
margin/right = -127.0
margin/bottom = -16.0
text = "COMPLETED: 2/12"
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="maps_created" type="Label" parent="bottom/center"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 20 )
margin/left = 120.0
margin/top = -32.0
margin/right = 270.0
margin/bottom = -16.0
text = "MAPS CREATED: 3"
align = 2
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="online" type="TextureButton" parent="bottom/center"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = -80.0
margin/right = 120.0
margin/bottom = -32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 21 )
textures/pressed = ExtResource( 22 )
textures/hover = ExtResource( 23 )
textures/disabled = ExtResource( 24 )
textures/focused = ExtResource( 25 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0

[node name="Label" type="Label" parent="bottom/center/online"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -12.0
margin/top = 16.0
margin/right = 108.0
margin/bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LABEL_ONLINE"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="end_game" parent="." instance=ExtResource( 26 )]

visibility/visible = false


[editable path="vigette"]
